# edge_colouring

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: graph.h  graph_dynamic_max.h  graph_static.h  main.cpp  palette.h  segment_tree.h  tree.h
tests/: test_graph.cpp  test_segment_tree.cpp  test_tree.cpp
tests/in_out/range_sum/: input_1.txt
